alpm-types/src/version/snapshots/base::invalid_pkgrel@case_8.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid package release
 | 
 | 
 | ^ expected positive decimal integer
